<resources>
    <string name="app_name">NekoExpress</string>
    <string name="image_view_thumbnail_description">Image Thumbnail</string>
    <string name="image_view_icon_description">Image Icon</string>

    <string name="format_date_default">dd/MM/yyyy</string>
    <string name="format_price_default">$ %.2f</string>
    <string name="format_invoice_number">%09d</string>
    <string name="format_invoice_delivery_address_summary">%s, %s, %s, %s</string>
    <string name="format_item_product_price">$ %.2f</string>
    <string name="format_item_product_score">%.1f</string>
    <string name="format_item_product_size">Size: %s</string>
    <string name="format_item_product_color">Color: %s</string>
    <string name="format_item_product_review">(%d reviews)</string>
    <string name="format_item_invoice_number">Order No: %09d</string>
    <string name="format_item_invoice_total">Total: $ %.2f</string>
    <string name="format_item_invoice_purchase_date">Date: %s</string>
    <string name="format_item_invoice_detail_size">Size: %s</string>
    <string name="format_item_invoice_detail_color">Color: %s</string>
    <string name="format_item_invoice_detail_quantity">Qty: %d</string>
    <string name="format_item_invoice_detail_price">$ %.2f</string>


    <string name="text_description_title">Description</string>
    <string name="text_size_title">Size</string>
    <string name="text_color_title">Color</string>
    <string name="text_subtotal_title">Subtotal</string>
    <string name="text_taxes_title">Taxes</string>
    <string name="text_total_title">Total</string>
    <string name="text_total_order_title">Total Order</string>
    <string name="text_order_number_title">Order No.</string>
    <string name="text_order_purchase_date_title">Purchase Date</string>
    <string name="text_order_delivery_address_summary_title">Delivery Address</string>
    <string name="text_order_summary_title">Order Summary</string>
    <string name="text_email_title">Email</string>
    <string name="text_phone_title">Mobile</string>
    <string name="text_register_date_title">Register Date</string>

    <string name="text_card_section_title">Card Information</string>
    <string name="text_card_number_title">Card Number</string>
    <string name="text_card_expire_date_title">Expire Date</string>
    <string name="text_card_cvv_title">CVV</string>
    <string name="text_card_holder_title">Card Holder</string>
    <string name="text_delivery_section_title">Delivery Information</string>
    <string name="text_delivery_department_title">Department</string>
    <string name="text_delivery_province_title">Province</string>
    <string name="text_delivery_district_title">District</string>
    <string name="text_delivery_address_title">Address</string>
    <string name="text_delivery_phone_title">Phone Number</string>

    <string name="text_empty_field_validation">This field can\'t be empty</string>
    <string name="text_match_regex_validation">This field doesn\'t match to the format %s required</string>
    <string name="text_card_expire_date_format">mm/yy</string>
    <string name="text_phone_format">+51-999888777</string>
    <string name="text_general_message_error">There are fields with errors</string>

    <string name="button_add_cart_description">Add To Cart</string>
    <string name="button_checkout_cart_description">Checkout</string>
    <string name="button_pay_order_description">Pay Order</string>
    <string name="button_confirm_order_description">Confirm Order</string>

    <string name="dialog_delete_item_title">Delete</string>
    <string name="dialog_delete_item_message">Are you sure you want to delete this item?</string>
    <string name="dialog_delete_item_positive_button">OK</string>
    <string name="dialog_delete_item_negative_button">Cancel           </string>

    <string name="dialog_confirm_order_success_title">Order Successful</string>
    <string name="dialog_confirm_order_success_message">Thanks for use our services. Your order is on the way.</string>
    <string name="dialog_confirm_order_success_positive_button">OK</string>

    <string name="dialog_confirm_order_fail_title">Oops..</string>
    <string name="dialog_confirm_order_fail_message">Something went wrong. Please try again.</string>
    <string name="dialog_confirm_order_fail_positive_button">OK</string>

    <string name="text_size_small_value">S</string>
    <string name="text_size_medium_value">M</string>
    <string name="text_size_large_value">L</string>
    <string name="text_size_extra_large_value">XL</string>

    <string name="text_color_red_value">Red</string>
    <string name="text_color_blue_value">Blue</string>
    <string name="text_color_green_value">Green</string>
    <string name="text_color_orange_value">Orange</string>
    <string name="text_color_purple_value">Purple</string>

    <string name="text_description_default">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don t look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn t anything embarrassing hidden in the middle of text.</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>