<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.fragment.DetailProductCatalogFragment">

    <ImageView
        android:id="@+id/imvThumbnail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image_view_thumbnail_description"
        android:src="@drawable/cloth_women_thumbnail_default"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardCornerRadius="@dimen/view_radius_12">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="Mens Cotton Candy Jacket Segunda linea"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textStyle="bold"
                android:maxLines="2"
                android:ellipsize="end"
                android:layout_marginTop="@dimen/view_margin_min"
                android:layout_marginStart="@dimen/view_margin_default"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tvPrice"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:id="@+id/imvScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/image_view_thumbnail_description"
                android:src="@drawable/ic_score"
                app:tint="@color/color_primary"
                android:scaleType="fitXY"
                android:layout_marginTop="@dimen/view_margin_min"
                app:layout_constraintStart_toStartOf="@id/tvTitle"
                app:layout_constraintTop_toBottomOf="@id/tvTitle"/>

            <TextView
                android:id="@+id/tvScore"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="4.7"
                android:layout_marginStart="@dimen/view_margin_min"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="@color/color_primary"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/imvScore"
                app:layout_constraintTop_toTopOf="@id/imvScore"
                app:layout_constraintBottom_toBottomOf="@id/imvScore"/>

            <TextView
                android:id="@+id/tvReviewAmount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="(200 reviews)"
                android:layout_marginStart="@dimen/view_margin_min"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="@color/color_secondary_variant"
                app:layout_constraintStart_toEndOf="@id/tvScore"
                app:layout_constraintTop_toTopOf="@id/tvScore"
                app:layout_constraintBottom_toBottomOf="@id/tvScore"/>

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="S/ 37.50"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textStyle="bold"
                android:textColor="@color/color_primary"
                android:layout_marginEnd="@dimen/view_margin_default"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tvTitle" />

            <TextView
                android:id="@+id/tvTitleDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/text_description_title"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/view_margin_default"
                android:layout_marginHorizontal="@dimen/view_margin_default"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvScore"/>

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="@string/text_description_default"
                android:textAppearance="?attr/textAppearanceBody2"
                android:maxLines="3"
                android:ellipsize="end"
                android:layout_marginTop="@dimen/view_margin_min"
                android:layout_marginHorizontal="@dimen/view_margin_default"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitleDescription"/>

            <TextView
                android:id="@+id/tvTitleSize"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/text_size_title"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/view_margin_default"
                android:layout_marginStart="@dimen/view_margin_default"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDescription"/>

            <LinearLayout
                android:id="@+id/lySizeSmall"
                android:layout_width="@dimen/view_size_14"
                android:layout_height="@dimen/view_size_14"
                android:layout_marginTop="@dimen/view_margin_min"
                android:background="@drawable/drw_size_layout_active"
                app:layout_constraintStart_toStartOf="@id/tvTitleSize"
                app:layout_constraintTop_toBottomOf="@id/tvTitleSize"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvSizeSmall"
                    android:text="@string/text_size_small_value"
                    android:textAppearance="?attr/textAppearanceCaption"
                    android:textColor="@color/color_on_primary"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lySizeMedium"
                android:layout_width="@dimen/view_size_14"
                android:layout_height="@dimen/view_size_14"
                android:layout_marginTop="@dimen/view_margin_min"
                android:layout_marginStart="@dimen/view_margin_min"
                android:background="@drawable/drw_size_layout_inactive"
                app:layout_constraintStart_toEndOf="@id/lySizeSmall"
                app:layout_constraintTop_toBottomOf="@id/tvTitleSize"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvSizeMedium"
                    android:text="@string/text_size_medium_value"
                    android:textAppearance="?attr/textAppearanceCaption"
                    android:textColor="@color/color_secondary_variant"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lySizeLarge"
                android:layout_width="@dimen/view_size_14"
                android:layout_height="@dimen/view_size_14"
                android:layout_marginTop="@dimen/view_margin_min"
                android:layout_marginStart="@dimen/view_margin_min"
                android:background="@drawable/drw_size_layout_inactive"
                app:layout_constraintStart_toEndOf="@id/lySizeMedium"
                app:layout_constraintTop_toBottomOf="@id/tvTitleSize"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvSizeLarge"
                    android:text="@string/text_size_large_value"
                    android:textAppearance="?attr/textAppearanceCaption"
                    android:textColor="@color/color_secondary_variant"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lySizeExtraLarge"
                android:layout_width="@dimen/view_size_14"
                android:layout_height="@dimen/view_size_14"
                android:layout_marginTop="@dimen/view_margin_min"
                android:layout_marginStart="@dimen/view_margin_min"
                android:background="@drawable/drw_size_layout_inactive"
                app:layout_constraintStart_toEndOf="@id/lySizeLarge"
                app:layout_constraintTop_toBottomOf="@id/tvTitleSize"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvSizeExtraLarge"
                    android:text="@string/text_size_extra_large_value"
                    android:textAppearance="?attr/textAppearanceCaption"
                    android:textColor="@color/color_secondary_variant"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tvTitleColor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/text_color_title"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/view_margin_default"
                app:layout_constraintStart_toStartOf="@id/imvColorRed"
                app:layout_constraintTop_toBottomOf="@id/tvDescription"/>

            <ImageButton
                android:id="@+id/imvColorRed"
                android:layout_width="@dimen/view_size_14"
                android:layout_height="@dimen/view_size_14"
                android:contentDescription="@string/image_view_icon_description"
                android:layout_marginTop="@dimen/view_margin_min"
                android:layout_marginEnd="@dimen/view_margin_min"
                android:src="@drawable/ic_check"
                app:tint="@color/color_on_primary"
                android:background="@drawable/drw_color_layout_red"
                app:layout_constraintEnd_toStartOf="@id/imvColorBlue"
                app:layout_constraintTop_toBottomOf="@id/tvTitleColor"
                />

            <ImageButton
                android:id="@+id/imvColorBlue"
                android:layout_width="@dimen/view_size_14"
                android:layout_height="@dimen/view_size_14"
                android:contentDescription="@string/image_view_icon_description"
                android:layout_marginTop="@dimen/view_margin_min"
                android:layout_marginEnd="@dimen/view_margin_min"
                app:tint="@color/color_on_primary"
                android:background="@drawable/drw_color_layout_blue"
                app:layout_constraintEnd_toStartOf="@id/imvColorGreen"
                app:layout_constraintTop_toBottomOf="@id/tvTitleColor"
                />

            <ImageButton
                android:id="@+id/imvColorGreen"
                android:layout_width="@dimen/view_size_14"
                android:layout_height="@dimen/view_size_14"
                android:contentDescription="@string/image_view_icon_description"
                android:layout_marginTop="@dimen/view_margin_min"
                android:layout_marginEnd="@dimen/view_margin_min"
                app:tint="@color/color_on_primary"
                android:background="@drawable/drw_color_layout_green"
                app:layout_constraintEnd_toStartOf="@id/imvColorOrange"
                app:layout_constraintTop_toBottomOf="@id/tvTitleColor"
                />

            <ImageButton
                android:id="@+id/imvColorOrange"
                android:layout_width="@dimen/view_size_14"
                android:layout_height="@dimen/view_size_14"
                android:contentDescription="@string/image_view_icon_description"
                android:layout_marginTop="@dimen/view_margin_min"
                android:layout_marginEnd="@dimen/view_margin_min"
                app:tint="@color/color_on_primary"
                android:background="@drawable/drw_color_layout_orange"
                app:layout_constraintEnd_toStartOf="@id/imvColorPurple"
                app:layout_constraintTop_toBottomOf="@id/tvTitleColor"
                />

            <ImageButton
                android:id="@+id/imvColorPurple"
                android:layout_width="@dimen/view_size_14"
                android:layout_height="@dimen/view_size_14"
                android:contentDescription="@string/image_view_icon_description"
                android:layout_marginTop="@dimen/view_margin_min"
                android:layout_marginEnd="@dimen/view_margin_default"
                app:tint="@color/color_on_primary"
                android:background="@drawable/drw_color_layout_purple"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitleColor"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCheckCart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_add_cart_description"
                android:textAllCaps="false"
                android:gravity="center"
                app:cornerRadius="@dimen/view_radius_12"
                android:paddingVertical="@dimen/view_padding_6"
                app:icon="@drawable/ic_cart"
                app:iconGravity="textStart"
                android:layout_marginHorizontal="@dimen/view_margin_default"
                android:layout_marginTop="@dimen/view_margin_default"
                android:layout_marginBottom="@dimen/view_margin_min"
                app:layout_constraintTop_toBottomOf="@id/lySizeSmall"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>